# model-ledger

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  blog-post.md  image-prompts.md  launch-kit.md
examples/: quickstart.py  sample_data.json
src/modelledger/: __init__.py  cli.py  core.py  models.py
src/modelledger/templates/: report.md.j2
tests/: test_core.py  test_integration.py
