[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelledger"
version = "0.1.0"
description = "MLOps compliance dashboard — lineage tracking and audit report generation."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ModelLedger Contributors"},
]
keywords = ["mlops", "compliance", "lineage", "audit", "ml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "jinja2>=3.1",
    "structlog>=23.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "types-PyYAML",
]

[project.scripts]
modelledger = "modelledger.cli:main"

[project.urls]
Homepage = "https://github.com/YOUR_ORG/modelledger"
Documentation = "https://github.com/YOUR_ORG/modelledger/tree/main/docs"
Repository = "https://github.com/YOUR_ORG/modelledger"
Issues = "https://github.com/YOUR_ORG/modelledger/issues"
Changelog = "https://github.com/YOUR_ORG/modelledger/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
modelledger = ["templates/*.j2"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
